--- a/amplificador.html
+++ b/amplificador.html
@@ -10,13 +10,16 @@
 <body>
     <header>
         <h1><a href="index.html">Sound Shop</a></h1>
+        <nav>
+            <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
+        </nav>
     </header>
 
     <main>
         <section class="produto-detalhe">
             <img src="img/guitarra/amplificador.jpg" alt="Guitarra Vermelha">
             <h2>Amplificador Vogga</h2>
-            <button onclick="comprar()">Comprar Agora</button>
+            <button class="comprar">Adicionar ao Carrinho</button>
             <div class="desc">
                 <h3>Descrição</h3>
                 <p><strong>Preço:</strong> R$ 779,90</p>
