--- a/baixo.html
+++ b/baixo.html
@@ -10,19 +10,24 @@
 <body>
     <header>
         <h1><a href="index.html">Sound Shop</a></h1>
+        <nav>
+            <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
+        </nav>
     </header>
 
     <main>
         <section class="produto-detalhe">
             <img src="img/guitarra/pexels-rdne-8198070.jpg" alt="Guitarra Vermelha">
             <h2>Contrabaixo Elétrico Strinberg</h2>
-            <p><strong>Preço:</strong> R$ 1.190,00</p>
-            <p><strong>Marca:</strong> Strinberg</p>
-            <p><strong>Cor:</strong> Laranja</p>
-            <p><strong>Material:</strong> Madeira de Mogno</p>
-            <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
-
-            <button onclick="comprar()">Comprar Agora</button>
+            <button class="comprar">Adicionar ao Carrinho</button>
+            <div class="desc">
+                <h3>Descrição</h3>
+                <p><strong>Preço:</strong> R$ 1.190,00</p>
+                <p><strong>Marca:</strong> Strinberg</p>
+                <p><strong>Cor:</strong> Laranja</p>
+                <p><strong>Material:</strong> Madeira de Mogno</p>
+                <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
+            </div>
         </section>
     </main>
 
