--- a/bateria.html
+++ b/bateria.html
@@ -10,19 +10,24 @@
 <body>
     <header>
         <h1><a href="index.html">Sound Shop</a></h1>
+        <nav>
+            <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
+        </nav>
     </header>
 
     <main>
         <section class="produto-detalhe">
             <img src="img/guitarra/Bateria.jpg" alt="Guitarra Vermelha">
             <h2>Bateria Completa</h2>
-            <p><strong>Preço:</strong> R$ 3.490,00</p>
-            <p><strong>Marca:</strong> Vogga</p>
-            <p><strong>Cor:</strong> Preto</p>
-            <p><strong>Material:</strong>Madeira, plástico, metal e ligas</p>
-            <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
-
-            <button onclick="comprar()">Comprar Agora</button>
+            <button class="comprar">Adicionar ao Carrinho</button>
+            <div class="desc">
+                <h3>Descrição</h3>
+                <p><strong>Preço:</strong> R$ 3.490,00</p>
+                <p><strong>Marca:</strong> Vogga</p>
+                <p><strong>Cor:</strong> Preto</p>
+                <p><strong>Material:</strong>Madeira, plástico, metal e ligas</p>
+                <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
+            </div>
         </section>
     </main>
 
