--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <h1>Welcome to my Shop!</h1>
+        <nav>
+            <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
+        </nav>
     </header>
 
     <h2>Instrumentos Musicais</h2>
@@ -27,7 +30,7 @@
                 </a>
                 <button class="ver"><a href="guitarra.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
 
             <div class="item">
@@ -38,7 +41,7 @@
                 </a>
                 <button class="ver"><a href="violao.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
 
             <div class="item">
@@ -49,7 +52,7 @@
                 </a>
                 <button class="ver"><a href="cajon.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
 
             <div class="item">
@@ -60,7 +63,7 @@
                 </a>
                 <button class="ver"><a href="bateria.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
 
             <div class="item">
@@ -71,7 +74,7 @@
                 </a>
                 <button class="ver"><a href="baixo.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
 
             <div class="item">
@@ -82,7 +85,7 @@
                 </a>
                 <button class="ver"><a href="amplificador.html">Ver Mais</a></button>
                 <br>
-                <button onclick="comprar()">Adicionar ao carrinho</button>
+                <button class="comprar">Adicionar ao carrinho</button>
             </div>
         </section>
     </main>
