--- a/cajon.html
+++ b/cajon.html
@@ -10,19 +10,24 @@
 <body>
     <header>
         <h1><a href="index.html">Sound Shop</a></h1>
+        <nav>
+            <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
+        </nav>
     </header>
 
     <main>
         <section class="produto-detalhe">
             <img src="img/guitarra/Cajon.jpg" alt="Cajon">
             <h2>Cajon</h2>
-            <p><strong>Preço:</strong> R$ 290,00</p>
-            <p><strong>Marca:</strong> Kotz</p>
-            <p><strong>Cor:</strong> Madeira</p>
-            <p><strong>Material:</strong> Madeira</p>
-            <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
-
-            <button onclick="comprar()">Comprar Agora</button>
+            <button class="comprar">Adicionar ao Carrinho</button>
+            <div class="desc">
+                <h3>Descrição</h3>
+                <p><strong>Preço:</strong> R$ 290,00</p>
+                <p><strong>Marca:</strong> Kotz</p>
+                <p><strong>Cor:</strong> Madeira</p>
+                <p><strong>Material:</strong> Madeira</p>
+                <p><strong>Formas de Pagamento:</strong> Cartão, Boleto, Pix</p>
+            </div>
         </section>
     </main>
 
