--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Welcome to my Shop!</h1>
+        <h1>Welcome to Sound Shop!</h1>
         <nav>
             <a href="carrinho.html" id="botao-carrinho">🛒 Carrinho</a>
         </nav>
