--- a/carrinho.html
+++ b/carrinho.html
@@ -15,6 +15,11 @@
 
     <section>
         <h2>Carrinho</h2>
+        <div id="carrinho">
+            <p>
+                Finalizar compra
+            </p>
+        </div>
     </section>
 </body>
 </html>
